change swagger params
